<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="yunstudio2015.android.yunmeet.activityz.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/toolbar_dark"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/toolbar_backbtn_back_width"
                android:layout_height="@dimen/toolbar_backbtn_back_height"
                android:id="@+id/iv_back"
                android:src="@drawable/btn_back"
                android:background="@color/toolbar_dark"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <Button
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:id="@+id/btn_next_step"
                android:background="@color/btn_background"
                android:text="@string/next_step"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/et_phone_number"
                android:inputType="number"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/phone_number_hint"
                android:textSize="16sp"
                android:maxLength="11"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:background="@android:color/transparent"
                android:text="@string/verify"
                android:textColor="@color/inner_grayerzz"
                android:id="@+id/send_code"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_tips"
            android:id="@+id/tv_phone_tip"
            android:textColor="@color/little_red"
            android:paddingLeft="@dimen/tips_padding_left"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/et_code"
                android:textSize="16sp"
                android:inputType="number"
                android:hint="@string/verify_hint"
                android:maxLength="6"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_tips"
            android:id="@+id/tv_code_tip"
            android:textColor="@color/little_red"
            android:paddingLeft="@dimen/tips_padding_left"
            android:textSize="10sp"/>

    </LinearLayout>

</LinearLayout>
