<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/signup_background"
    tools:context="yunstudio2015.android.yunmeet.activityz.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:text="@string/YUNMEET"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:layout_marginRight="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="phone"
                android:background="@null"
                android:hint="@string/phone_number"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:id="@+id/et_phone"
                android:maxLength="11"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_marginRight="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:id="@+id/et_password"
                android:maxLength="20"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9fd500"
            android:layout_marginTop="16dp"
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textColor="@android:color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:id="@+id/tv_signup"
                android:layout_alignParentLeft="true"
                android:text="@string/to_signup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_forgot_password"
                android:textColor="@android:color/white"
                android:layout_alignParentRight="true"
                android:text="@string/forgot_password"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/using_social_account" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:visibility="invisible"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:id="@+id/ibtn_QQ"
                android:background="@android:color/transparent"
                android:src="@drawable/qq"/>

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:id="@+id/ibtn_wechat"
                android:background="@android:color/transparent"
                android:src="@drawable/wechat"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
