<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="yunstudio2015.android.yunmeet.activityz.SetNickNameActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:background="@color/actionbar_color"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_width="@dimen/toolbar_backbtn_back_width"
                android:layout_height="@dimen/toolbar_backbtn_back_height"
                android:id="@+id/iv_back"
                android:src="@drawable/btn_back"
                android:background="@color/toolbar_dark"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_nick_name"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                android:textSize="@dimen/actionbar_title_size"/>

            <Button
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_marginRight="16dp"
                android:id="@+id/btn_next_step"
                android:background="@color/btn_background"
                android:text="@string/next_step"
                android:gravity="center"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:id="@+id/et_nickname"
            android:hint="@string/set_nick"
            android:textColorHint="@color/inner_grayerzz"
            android:background="@null"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/inner_grayerzz"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nickname_tip"
            android:textSize="10sp"
            android:textColor="@color/little_red"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/iv_male"
                    android:src="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/iv_female"
                    android:background="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/inner_grayerzz"/>

    </LinearLayout>



</LinearLayout>
