<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/signup_background"
    android:orientation="vertical"
    tools:context="yunstudio2015.android.yunmeet.activityz.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/YUNMEET_height"
            android:text="@string/YUNMEET"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/YUNMEET_textsize"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:layout_marginRight="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:inputType="phone"
                android:background="@null"
                android:hint="@string/phone_number"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:id="@+id/et_phone"
                android:maxLength="11"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_tips"
            android:id="@+id/tv_phone_tip"
            android:textColor="@color/little_red"
            android:paddingLeft="@dimen/tips_padding_left"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_marginRight="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:id="@+id/et_password"
                android:maxLength="20" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_tips"
            android:id="@+id/tv_password_tip"
            android:textColor="@color/little_red"
            android:paddingLeft="@dimen/tips_padding_left"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height"
                    android:id="@+id/et_verification_code"
                    android:inputType="number"
                    android:background="@null"
                    android:hint="@string/verification_code"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:maxLength="6"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:id="@+id/btn_send_virification_code"
                    android:text="@string/send_verification_code"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>

        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_tips"
            android:id="@+id/tv_code_tip"
            android:textColor="@color/little_red"
            android:paddingLeft="@dimen/tips_padding_left"
            android:textSize="10sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/btn_background"
            android:layout_marginTop="16dp"
            android:id="@+id/btn_signup"
            android:text="@string/signup"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/tv_login"
            android:layout_marginTop="8dp"
            android:text="@string/to_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/using_social_account" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:visibility="invisible"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:id="@+id/ibtn_QQ"
                android:background="@android:color/transparent"
                android:src="@drawable/qq"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:id="@+id/ibtn_weibo"
                android:background="@android:color/transparent"
                android:src="@drawable/weibo"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
